force-app/main/default/objects/Current_Vendors__c/Current_Vendors__c.object-meta.xml
<CustomObject>
    <description>Used by TSB to track vendors currently selling to potential/current accounts.</description>
    <label>Current Vendor</label>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Current Vendor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>