force-app/main/default/objects/Current_Vendors__c/fields/Brights_Increments__c.field-meta.xml
<CustomField>
    <fullName>Brights_Increments__c</fullName>
    <label>Brights Increments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>