force-app/main/default/objects/Current_Vendors__c/fields/Copy_8_5_x_11_Increments__c.field-meta.xml
<CustomField>
    <fullName>Copy_8_5_x_11_Increments__c</fullName>
    <label>Copy 8.5 x 11 Increments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>