force-app/main/default/objects/Current_Vendors__c/fields/Copy_Support_QTY__c.field-meta.xml
<CustomField>
    <fullName>Copy_Support_QTY__c</fullName>
    <label>Copy Support QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>