force-app/main/default/objects/Current_Vendors__c/fields/GTM__c.field-meta.xml
<CustomField>
    <fullName>GTM__c</fullName>
    <inlineHelpText>The GTM% for this product.</inlineHelpText>
    <label>GTM %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>