force-app/main/default/objects/Current_Vendors__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Awarded Vendors</relationshipLabel>
    <relationshipName>Current_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>