force-app/main/default/objects/Current_Vendors__c/fields/Other_Increments__c.field-meta.xml
<CustomField>
    <fullName>Other_Increments__c</fullName>
    <label>Other Increments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>