force-app/main/default/objects/Current_Vendors__c/fields/Pastels_QTY__c.field-meta.xml
<CustomField>
    <fullName>Pastels_QTY__c</fullName>
    <label>Pastels QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>