force-app/main/default/objects/Current_Vendors__c/fields/Product_Paper__c.field-meta.xml
<CustomField>
    <fullName>Product_Paper__c</fullName>
    <label>Product - Paper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A-1</fullName>
            </value>
            <value>
                <fullName>ASPEN 30</fullName>
            </value>
            <value>
                <fullName>BOISE MULTI-PURPOSE</fullName>
            </value>
            <value>
                <fullName>BOISE X-9</fullName>
            </value>
            <value>
                <fullName>COMET92</fullName>
            </value>
            <value>
                <fullName>COMET92 30% Recycled</fullName>
            </value>
            <value>
                <fullName>CUTSIZE COLORS</fullName>
            </value>
            <value>
                <fullName>DOMTAR COPY</fullName>
            </value>
            <value>
                <fullName>ECONOSOURCE</fullName>
            </value>
            <value>
                <fullName>EXCELLENT COPY (IMPORT)</fullName>
            </value>
            <value>
                <fullName>FASCOPY</fullName>
            </value>
            <value>
                <fullName>FASCOPY RECYCLED</fullName>
            </value>
            <value>
                <fullName>FLAGSHIP</fullName>
            </value>
            <value>
                <fullName>FLAMBEAU RIVER</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>HAMMERMILL TIDAL</fullName>
            </value>
            <value>
                <fullName>KELLY COPY</fullName>
            </value>
            <value>
                <fullName>METEOR</fullName>
            </value>
            <value>
                <fullName>NORCOPY</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PAPER ONE (IMPORT)</fullName>
            </value>
            <value>
                <fullName>PRINT RITE</fullName>
            </value>
            <value>
                <fullName>RED TOP</fullName>
            </value>
            <value>
                <fullName>RELAY DP</fullName>
            </value>
            <value>
                <fullName>SPECTRUM</fullName>
            </value>
            <value>
                <fullName>SPECTRUM 30% Recycled</fullName>
            </value>
            <value>
                <fullName>SUZANO</fullName>
            </value>
            <value>
                <fullName>WHITE BOX</fullName>
            </value>
            <value>
                <fullName>WHITE TOP</fullName>
            </value>
            <value>
                <fullName>XEROX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>