force-app/main/default/objects/Current_Vendors__c/fields/Quantity_in_cases__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_cases__c</fullName>
    <inlineHelpText>Enter the quantity by # of cases (allows 2 decimal places)</inlineHelpText>
    <label>Quantity (in cases)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>