force-app/main/default/objects/Current_Vendors__c/fields/Supplied__c.field-meta.xml
<CustomField>
    <fullName>Supplied__c</fullName>
    <label>% Supplied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>