force-app/main/default/objects/Current_Vendors__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Discount (1%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>