force-app/main/default/objects/Current_Vendors__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipName>Current_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>