force-app/main/default/objects/Current_Vendors__c/fields/Vendor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Notes__c</fullName>
    <label>Vendor Notes</label>
    <type>TextArea</type>
</CustomField>