force-app/main/default/objects/Current_Vendors__c/fields/Won_by_Unisource__c.field-meta.xml
<CustomField>
    <fullName>Won_by_Unisource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Won by Unisource</label>
    <type>Checkbox</type>
</CustomField>