force-app/main/default/objects/Current_Vendors__c/recordTypes/Account_Current_Vendors.recordType-meta.xml
<RecordType>
    <fullName>Account_Current_Vendors</fullName>
    <active>true</active>
    <description>Track current vendors for the account overall</description>
    <label>Account Current Vendors</label>
</RecordType>