force-app/main/default/objects/Current_Vendors__c/recordTypes/Opportunity_Current_Vendors.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Current_Vendors</fullName>
    <active>true</active>
    <description>Track awarded vendors per opportunity</description>
    <label>Opportunity Current Vendors</label>
</RecordType>